# bytesnare

./: ByteSnare.py  README.md  config.yaml  credentials.db  install.sh  pyproject.toml  requirements.txt
shadownet/: __init__.py  __main__.py  banner_spoofer.py  config.py  dashboard.py  decoy_server.py  entrypoint.py  firewall.py  geo.py  honeyfile_monitor.py  logger.py  models.py
