[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shadownet"
version = "2.0.0"
description = "Dynamic Honeypot with Active Defense — decoy ports, honeyfiles, geo-OSINT, and host firewall mitigation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ShadowNet Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
keywords = ["honeypot", "security", "active-defense", "deception"]

dependencies = [
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/shadownet/shadownet"
Documentation = "https://shadownet.readthedocs.io"

[project.scripts]
shadownet = "shadownet.entrypoint:main"

[tool.setuptools.packages.find]
include = ["shadownet*"]
